--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ debian/php-vitexsoftware-ease-bootstrap5-widgets
 
 /debian/php-vitexsoftware-ease-bootstrap5-widgets.substvars
 /debian/php-vitexsoftware-ease-bootstrap5-widgets.debhelper.log
+/.build/
