--- a/composer.json
+++ b/composer.json
@@ -24,9 +24,18 @@
         "vitexsoftware/ease-twbootstrap5": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": ">=8"
+        "phpunit/phpunit": "*",
+        "phpstan/phpstan": "*",
+        "friendsofphp/php-cs-fixer": "^3.61",
+        "ergebnis/composer-normalize": "^2.43",
+        "ergebnis/php-cs-fixer-config": "^6.34"
     },
     "type": "library",
-    "homepage": "http://v.s.cz/ease.php",
-    "license": "MIT"
+    "homepage": "https://github.com/VitexSoftware/php-ease-twbootstrap4-widgets-abraflexi",
+    "license": "MIT",
+    "config": {
+        "allow-plugins": {
+            "ergebnis/composer-normalize": true
+        }
+    }
 }
